--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <header><title>Kaito's website</title></header>
 <body>
-<h1>Hello the fucking world and eat mah shits u mada facka!!!</h1>
-<p>Chiến Nova 3 gà vãi chó!!!</p>
+<h1>hế lô mấy bạn!!!</h1>
+  <p>Cường nè!!!....alo....alo!</p>
 </body>
 </html>
