--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
 <h1>hế lô mấy bạn!!!</h1>
   <p>Cường nè!!!....alo....alo!</p>
+  <p>cuối cùng mình cũng làm đc rồi mọi ng ơi...</p>
+  <p>trang web đầu đời</p>
 </body>
 </html>
