--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <h1>hế lô mấy bạn!!!</h1>
   <p>Cường nè!!!....alo....alo!</p>
   <p>cuối cùng mình cũng làm đc rồi mọi ng ơi...</p>
-  <p>trang web đầu đời</p>
+  <p>hello da fukin' world!</p>
 </body>
 </html>
